--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "apexcharts": "^3.37.1",
     "framer-motion": "^10.3.0",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "typescript": "4.9.5"
