--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.6",
     "react-icons": "^4.8.0",
+    "react-query": "^3.39.3",
     "typescript": "4.9.5",
     "yup": "^1.0.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "miragejs": "^0.1.47"
   }
 }
