--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "apexcharts": "^3.37.1",
+    "axios": "^1.3.4",
     "framer-motion": "^10.3.0",
     "next": "13.2.4",
     "react": "18.2.0",
